test/runnable/extra-files/usedefaultlib.d
import defaultlib;

extern (C) int main(int argc, char **argv)
{
    const result = defaultlibFunc();
    return 0;
}
