test/fail_compilation/fail150.d
import std.stdio;

class class1
{
}

class Foo
{
}

int main(char[][] argv)
{
    class1 myclass = new class1;

    myclass.new Foo();
    return 0;
}

